sec_group_db.tf
resource "aws_security_group" "SG_DB" {
  name        = "SG_DB"
  description = "Allow SG_DB inbound traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "SG_DB from VPC"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow ssh"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = var.tags
}
